<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/VMListFragment"
            android:icon="@drawable/icons_vm"
            android:title="@string/overzicht_vms"
            />
        <item
            android:id="@+id/addVmFragment"
            android:icon="@drawable/icons_add"
            android:title="@string/vm_aanvragen"
            />
        <item
            android:id="@+id/profielFragment"
            android:icon="@drawable/icons_male_user"
            android:title="@string/profiel"
            />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/icons_login"
            android:title="@string/login"
            />
    </group>
</menu>