<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.vms.aanvraag.AanvraagFactoryModel">
    <data>
        <variable
            name="viewmodel"
            type="com.hogent.devOps_Android.ui.vms.aanvraag.VmAanvraagViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vmaanvraaglayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:id="@+id/titleVmAanvraag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_vm_aanvraag"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:scrollbarThumbVertical="@color/black"
            android:id="@+id/scrollView2"
            android:layout_width="330dp"
            android:layout_height="610dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"-->


                <TextView
                    android:id="@+id/naamVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="true"
                    android:text="@string/naam_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/inputTextNaamVirtualmachine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{viewmodel::setNaamVm}"
                    android:backgroundTint="@color/blue_med"
                    android:ems="10"
                    android:hint="@string/naam_vm_aanvraag"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:id="@+id/hostnameVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_hostname_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/inputHostnameVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{viewmodel::setHostnameVm}"
                    android:backgroundTint="@color/blue_med"
                    android:ems="10"
                    android:hint="@string/hostname_vm_aanvraag"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:id="@+id/operatingsystemVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_operating_system_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <RadioGroup
                    android:id="@+id/group_os_vm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:text="@string/os_windows"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:minHeight="48dp"
                        android:text="@string/os_linux"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:minHeight="48dp"
                        android:text="@string/os_mac"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </RadioGroup>

                <TextView
                    android:id="@+id/titleVcpuAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_aantal_vcpu"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <SeekBar
                    android:id="@+id/aantalVcpuAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="16"
                    android:min="2"

                    android:progressTint="#000000"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
                <!--android:value="@={viewmodel.cpuCoresValue}"
                    }"-->

                <TextView
                    android:id="@+id/storageVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_storage_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/inputStorageVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_med"
                    android:ems="10"
                    android:hint="@string/aantal_gb_storage"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:id="@+id/memoryTitleVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/memory_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <Spinner
                    style="@style/spinnerWithBlackText"
                    android:id="@+id/memoryVmAanvraagDropdownList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:textColorHint="@color/black" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <RadioGroup
                    android:id="@+id/group_mode_vm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black">

                    <RadioButton
                        android:id="@+id/iaasVmAanvraagZelf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:text="@string/iaasmodevm_zelf"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                    <RadioButton
                        android:id="@+id/iaasVmAanvraagVoorzien"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:text="@string/iaasmodevm_voorzien"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                    <RadioButton
                        android:id="@+id/paasVmAanvraag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/black"
                        android:text="@string/paasmodevm"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                </RadioGroup>

                <TextView
                    android:id="@+id/backupTitleVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <Spinner
                    style="@style/spinnerWithBlackText"
                    android:id="@+id/backupVmDropdownList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:textColorHint="@color/black" />

                <TextView
                    android:id="@+id/titleStartdateVmaanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_data_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <DatePicker
                    android:id="@+id/startDateVmAanvraag"
                    style="@android:style/Widget.DatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:id="@+id/titleEndDateVmAanvraag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_vm_aanvraag"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <DatePicker
                    android:id="@+id/endDateVmAanvraag"
                    style="@android:style/Widget.DatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <Button
                    android:id="@+id/aanvraagSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewmodel.aanvragen()}"
                    android:text="@string/aanvragen"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>