<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.hogent.devOps_Android.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/login_to_register"
            app:destination="@id/registerFragment"
            />
        <action
            android:id="@+id/login_to_profile"
            app:destination="@+id/profielFragment"
            />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.hogent.devOps_Android.ui.register.RegisterFragment"
        android:label="@string/registreer"
        tools:layout="@layout/fragment_register" >

        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />

    </fragment>

    <fragment
        android:id="@+id/addVmFragment"
        android:name="com.hogent.devOps_Android.ui.vms.aanvraag.VmAanvraagFragment"
        android:label="VmAanvraag"
        tools:layout="@layout/addvm_fragment">
    </fragment>


    <fragment
        android:id="@+id/profielFragment"
        android:name="com.hogent.devOps_Android.ui.klant.CustomerProfileFragment"
        android:label="@string/profiel"
        tools:layout="@layout/fragment_profiel">

        <argument
            android:name="customerId"
            app:argType="string"
            />

    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.hogent.devOps_Android.ui.vms.details.VMDetailsFragment"
        android:label="@string/vm_details_fragment">

        <argument
            android:name="vm_id"
            app:argType="long"
            />
        <action
            android:id="@+id/action_from_detail_to_vmlist"
            app:destination="@id/VMListFragment">
        </action>


    </fragment>
    <fragment
        android:id="@+id/VMListFragment"
        android:name="com.hogent.devOps_Android.ui.vms.overview.VMListFragment"
        android:label="VMListFragment" >
        <action
            android:id="@+id/action_from_vmlist_to_detail"
            app:destination="@+id/detailsFragment">

        </action>


    </fragment>


</navigation>