<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loViewModel"
            type="com.hogent.devOps_Android.ui.login.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/login_container"
            android:layout_width="293dp"
            android:layout_height="283dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="296dp"
            android:alpha="0.7"
            android:contentDescription="@string/logo_hogent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hogent_logo"
            app:srcCompat="@drawable/rectangle" />

        <TextView
            android:id="@+id/logged_in_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged in"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/login_container"
            app:layout_constraintEnd_toEndOf="@+id/login_container"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/login_container"
            app:layout_constraintTop_toBottomOf="@+id/logout_button"
            app:layout_constraintVertical_bias="0.868"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="205dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/chamilo_blue"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/login_container"
            app:layout_constraintStart_toStartOf="@+id/login_container"
            app:layout_constraintTop_toTopOf="@+id/login_container"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/logout_button"
            android:layout_width="205dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/chamilo_blue"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="@+id/login_container"
            app:layout_constraintStart_toStartOf="@+id/login_container"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            tools:ignore="MissingConstraints" />

        <ImageView
        android:id="@+id/hogent_logo"
        android:layout_width="213dp"
        android:layout_height="116dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/login_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hogentlogo" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="16dp"
            android:text="@string/register_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/naarRegistreerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/registreer"
            android:textColor="@color/light_blue_med"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toEndOf="@+id/register_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>